qt4: Add old copy of source code of pinentry-qt for building with Qt4

* qt4: New.
--

This adds a copy of revision 2859eddfb0c935d3f9eb9ccc1b42c121621123e9
of qt.

GnuPG-bug-id: 5569